update another step on the project

--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -92,6 +92,29 @@
     {
       "cell_type": "code",
       "source": [
+        "compute_target = ws.compute_targets[\"cpucluster\"]"
+      ],
+      "outputs": [],
+      "execution_count": 13,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "gather": {
+          "logged": 1608491065675
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from azureml.widgets import RunDetails\n",
         "from azureml.train.sklearn import SKLearn\n",
         "from azureml.train.hyperdrive.run import PrimaryMetricGoal\n",
@@ -104,7 +127,8 @@
         "# Specify parameter sampler\n",
         "ps = RandomParameterSampling( {\n",
         "        \"C\": uniform(0.05, 0.1),\n",
-        "    }\n",
+        "        \"max_iter\": choice(100, 200, 300)\n",
+        "    })\n",
         "\n",
         "# Specify a Policy\n",
         "policy = BanditPolicy(slack_factor = 0.1, evaluation_interval=1, delay_evaluation=5)\n",
@@ -113,13 +137,31 @@
         "    os.mkdir(\"./training\")\n",
         "\n",
         "# Create a SKLearn estimator for use with train.py\n",
-        "est = ### YOUR CODE HERE ###\n",
+        "est = ScriptRunConfig(source_directory='.',\n",
+        "                      script='train.py',\n",
+        "                      arguments=['--C', 1.0, '--max_iter', 100.0],\n",
+        "                      compute_target=compute_target,\n",
+        "                    #  environment=sklearn_env\n",
+        "                      )\n",
         "\n",
         "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
-        "hyperdrive_config = ### YOUR CODE HERE ###"
+        "hyperdrive_config = HyperDriveConfig()"
       ],
-      "outputs": [],
-      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "__init__() missing 1 required positional argument: 'source_directory'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-243b78b6a1e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;31m# Create a SKLearn estimator for use with train.py\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSKLearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;31m# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/anaconda/envs/azureml_py36/lib/python3.6/site-packages/azureml/core/_experiment_method.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     95\u001b[0m             \"\"\"\n\u001b[1;32m     96\u001b[0m             \u001b[0mExperimentSubmitRegistrar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregister_submit_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubmit_function\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 97\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0minit_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     98\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mreal_decorator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'source_directory'"
+          ]
+        }
+      ],
+      "execution_count": 11,
       "metadata": {
         "gather": {
           "logged": 1598275789986
