--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "source": [
+        "https://knowledge.udacity.com/questions/423888\n"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "source": [
         "from azureml.core import Workspace, Experiment\n",
@@ -58,7 +65,9 @@
         "                                                           max_nodes=4)\n",
         "    cpu_cluster = ComputeTarget.create(ws, cpu_cluster_name, compute_config)\n",
         "\n",
-        "cpu_cluster.wait_for_completion(show_output=True)"
+        "cpu_cluster.wait_for_completion(show_output=True)\n",
+        "\n",
+        "compute_target = ws.compute_targets[\"cpucluster\"]"
       ],
       "outputs": [
         {
@@ -92,31 +101,8 @@
     {
       "cell_type": "code",
       "source": [
-        "compute_target = ws.compute_targets[\"cpucluster\"]"
-      ],
-      "outputs": [],
-      "execution_count": 13,
-      "metadata": {
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        },
-        "gather": {
-          "logged": 1608491065675
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "from azureml.widgets import RunDetails\n",
-        "from azureml.train.sklearn import SKLearn\n",
+        "#from azureml.train.sklearn import SKLearn\n",
         "from azureml.train.hyperdrive.run import PrimaryMetricGoal\n",
         "from azureml.train.hyperdrive.policy import BanditPolicy\n",
         "from azureml.train.hyperdrive.sampling import RandomParameterSampling\n",
@@ -139,15 +125,21 @@
         "    os.mkdir(\"./training\")\n",
         "\n",
         "# Create a SKLearn estimator for use with train.py\n",
-        "est = ScriptRunConfig(source_directory='.',\n",
+        "src = ScriptRunConfig(source_directory='.',\n",
         "                      script='train.py',\n",
-        "                      arguments=['--C', 1.0, '--max_iter', 100.0],\n",
+        "                    #  arguments=['--C', 1.0, '--max_iter', 100],\n",
         "                      compute_target=compute_target,\n",
         "                    #  environment=sklearn_env\n",
         "                      )\n",
         "\n",
         "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
-        "hyperdrive_config = HyperDriveConfig(run_config=est, hyperparameter_sampling=ps, policy=policy, primary_metric_name=\"accuracy\", primary_metric_goal=PrimaryMetricGoal.MAXIMIZE, max_total_runs=100, max_concurrent_runs=4)"
+        "hyperdrive_config = HyperDriveConfig(run_config=src, \n",
+        "                                     hyperparameter_sampling=ps, \n",
+        "                                     policy=policy, \n",
+        "                                     primary_metric_name=\"Accuracy\", \n",
+        "                                     primary_metric_goal=PrimaryMetricGoal.MAXIMIZE, \n",
+        "                                     max_total_runs=100, \n",
+        "                                     max_concurrent_runs=4)"
       ],
       "outputs": [],
       "execution_count": 16,
@@ -202,64 +194,6 @@
       "metadata": {
         "gather": {
           "logged": 1608496172578
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from azureml.data.dataset_factory import TabularDatasetFactory\r\n",
-        "\r\n",
-        "ds1 = TabularDatasetFactory.from_delimited_files(\"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\")"
-      ],
-      "outputs": [],
-      "execution_count": 22,
-      "metadata": {
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        },
-        "gather": {
-          "logged": 1608496018143
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "ds1.to_pandas_dataframe()"
-      ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "execution_count": 24,
-          "data": {
-            "text/plain": "       age          job  marital          education  default housing loan  \\\n0       57   technician  married        high.school       no      no  yes   \n1       55      unknown  married            unknown  unknown     yes   no   \n2       33  blue-collar  married           basic.9y       no      no   no   \n3       36       admin.  married        high.school       no      no   no   \n4       27    housemaid  married        high.school       no     yes   no   \n...    ...          ...      ...                ...      ...     ...  ...   \n32945   56    housemaid  married           basic.4y       no      no  yes   \n32946   37   management  married  university.degree       no      no  yes   \n32947   26       admin.   single  university.degree       no      no   no   \n32948   31  blue-collar   single           basic.9y       no      no   no   \n32949   39    housemaid  married           basic.4y       no      no   no   \n\n         contact month day_of_week  ...  campaign  pdays  previous  \\\n0       cellular   may         mon  ...         1    999         1   \n1      telephone   may         thu  ...         2    999         0   \n2       cellular   may         fri  ...         1    999         1   \n3      telephone   jun         fri  ...         4    999         0   \n4       cellular   jul         fri  ...         2    999         0   \n...          ...   ...         ...  ...       ...    ...       ...   \n32945   cellular   jul         mon  ...         1    999         0   \n32946   cellular   jul         fri  ...         7    999         0   \n32947   cellular   may         tue  ...         4    999         1   \n32948   cellular   apr         mon  ...         1    999         0   \n32949   cellular   aug         thu  ...         1    999         0   \n\n          poutcome emp.var.rate  cons.price.idx  cons.conf.idx  euribor3m  \\\n0          failure         -1.8          92.893          -46.2      1.299   \n1      nonexistent          1.1          93.994          -36.4      4.860   \n2          failure         -1.8          92.893          -46.2      1.313   \n3      nonexistent          1.4          94.465          -41.8      4.967   \n4      nonexistent          1.4          93.918          -42.7      4.963   \n...            ...          ...             ...            ...        ...   \n32945  nonexistent          1.4          93.918          -42.7      4.960   \n32946  nonexistent          1.4          93.918          -42.7      4.957   \n32947      failure         -1.8          92.893          -46.2      1.266   \n32948  nonexistent         -1.8          93.075          -47.1      1.405   \n32949  nonexistent          1.4          93.444          -36.1      4.963   \n\n       nr.employed   y  \n0           5099.1  no  \n1           5191.0  no  \n2           5099.1  no  \n3           5228.1  no  \n4           5228.1  no  \n...            ...  ..  \n32945       5228.1  no  \n32946       5228.1  no  \n32947       5099.1  no  \n32948       5099.1  no  \n32949       5228.1  no  \n\n[32950 rows x 21 columns]",
-            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>job</th>\n      <th>marital</th>\n      <th>education</th>\n      <th>default</th>\n      <th>housing</th>\n      <th>loan</th>\n      <th>contact</th>\n      <th>month</th>\n      <th>day_of_week</th>\n      <th>...</th>\n      <th>campaign</th>\n      <th>pdays</th>\n      <th>previous</th>\n      <th>poutcome</th>\n      <th>emp.var.rate</th>\n      <th>cons.price.idx</th>\n      <th>cons.conf.idx</th>\n      <th>euribor3m</th>\n      <th>nr.employed</th>\n      <th>y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>57</td>\n      <td>technician</td>\n      <td>married</td>\n      <td>high.school</td>\n      <td>no</td>\n      <td>no</td>\n      <td>yes</td>\n      <td>cellular</td>\n      <td>may</td>\n      <td>mon</td>\n      <td>...</td>\n      <td>1</td>\n      <td>999</td>\n      <td>1</td>\n      <td>failure</td>\n      <td>-1.8</td>\n      <td>92.893</td>\n      <td>-46.2</td>\n      <td>1.299</td>\n      <td>5099.1</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>55</td>\n      <td>unknown</td>\n      <td>married</td>\n      <td>unknown</td>\n      <td>unknown</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>telephone</td>\n      <td>may</td>\n      <td>thu</td>\n      <td>...</td>\n      <td>2</td>\n      <td>999</td>\n      <td>0</td>\n      <td>nonexistent</td>\n      <td>1.1</td>\n      <td>93.994</td>\n      <td>-36.4</td>\n      <td>4.860</td>\n      <td>5191.0</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>33</td>\n      <td>blue-collar</td>\n      <td>married</td>\n      <td>basic.9y</td>\n      <td>no</td>\n      <td>no</td>\n      <td>no</td>\n      <td>cellular</td>\n      <td>may</td>\n      <td>fri</td>\n      <td>...</td>\n      <td>1</td>\n      <td>999</td>\n      <td>1</td>\n      <td>failure</td>\n      <td>-1.8</td>\n      <td>92.893</td>\n      <td>-46.2</td>\n      <td>1.313</td>\n      <td>5099.1</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>36</td>\n      <td>admin.</td>\n      <td>married</td>\n      <td>high.school</td>\n      <td>no</td>\n      <td>no</td>\n      <td>no</td>\n      <td>telephone</td>\n      <td>jun</td>\n      <td>fri</td>\n      <td>...</td>\n      <td>4</td>\n      <td>999</td>\n      <td>0</td>\n      <td>nonexistent</td>\n      <td>1.4</td>\n      <td>94.465</td>\n      <td>-41.8</td>\n      <td>4.967</td>\n      <td>5228.1</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>27</td>\n      <td>housemaid</td>\n      <td>married</td>\n      <td>high.school</td>\n      <td>no</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>cellular</td>\n      <td>jul</td>\n      <td>fri</td>\n      <td>...</td>\n      <td>2</td>\n      <td>999</td>\n      <td>0</td>\n      <td>nonexistent</td>\n      <td>1.4</td>\n      <td>93.918</td>\n      <td>-42.7</td>\n      <td>4.963</td>\n      <td>5228.1</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>32945</th>\n      <td>56</td>\n      <td>housemaid</td>\n      <td>married</td>\n      <td>basic.4y</td>\n      <td>no</td>\n      <td>no</td>\n      <td>yes</td>\n      <td>cellular</td>\n      <td>jul</td>\n      <td>mon</td>\n      <td>...</td>\n      <td>1</td>\n      <td>999</td>\n      <td>0</td>\n      <td>nonexistent</td>\n      <td>1.4</td>\n      <td>93.918</td>\n      <td>-42.7</td>\n      <td>4.960</td>\n      <td>5228.1</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>32946</th>\n      <td>37</td>\n      <td>management</td>\n      <td>married</td>\n      <td>university.degree</td>\n      <td>no</td>\n      <td>no</td>\n      <td>yes</td>\n      <td>cellular</td>\n      <td>jul</td>\n      <td>fri</td>\n      <td>...</td>\n      <td>7</td>\n      <td>999</td>\n      <td>0</td>\n      <td>nonexistent</td>\n      <td>1.4</td>\n      <td>93.918</td>\n      <td>-42.7</td>\n      <td>4.957</td>\n      <td>5228.1</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>32947</th>\n      <td>26</td>\n      <td>admin.</td>\n      <td>single</td>\n      <td>university.degree</td>\n      <td>no</td>\n      <td>no</td>\n      <td>no</td>\n      <td>cellular</td>\n      <td>may</td>\n      <td>tue</td>\n      <td>...</td>\n      <td>4</td>\n      <td>999</td>\n      <td>1</td>\n      <td>failure</td>\n      <td>-1.8</td>\n      <td>92.893</td>\n      <td>-46.2</td>\n      <td>1.266</td>\n      <td>5099.1</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>32948</th>\n      <td>31</td>\n      <td>blue-collar</td>\n      <td>single</td>\n      <td>basic.9y</td>\n      <td>no</td>\n      <td>no</td>\n      <td>no</td>\n      <td>cellular</td>\n      <td>apr</td>\n      <td>mon</td>\n      <td>...</td>\n      <td>1</td>\n      <td>999</td>\n      <td>0</td>\n      <td>nonexistent</td>\n      <td>-1.8</td>\n      <td>93.075</td>\n      <td>-47.1</td>\n      <td>1.405</td>\n      <td>5099.1</td>\n      <td>no</td>\n    </tr>\n    <tr>\n      <th>32949</th>\n      <td>39</td>\n      <td>housemaid</td>\n      <td>married</td>\n      <td>basic.4y</td>\n      <td>no</td>\n      <td>no</td>\n      <td>no</td>\n      <td>cellular</td>\n      <td>aug</td>\n      <td>thu</td>\n      <td>...</td>\n      <td>1</td>\n      <td>999</td>\n      <td>0</td>\n      <td>nonexistent</td>\n      <td>1.4</td>\n      <td>93.444</td>\n      <td>-36.1</td>\n      <td>4.963</td>\n      <td>5228.1</td>\n      <td>no</td>\n    </tr>\n  </tbody>\n</table>\n<p>32950 rows × 21 columns</p>\n</div>"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 24,
-      "metadata": {
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        },
-        "gather": {
-          "logged": 1608496046401
         }
       }
     },
