finish notebook exercises

--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -235,6 +235,13 @@
       }
     },
     {
+      "source": [
+        "https://knowledge.udacity.com/questions/384083"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "source": [
         "import joblib\n",
@@ -242,7 +249,10 @@
         "\n",
         "### YOUR CODE HERE ###\n",
         "best_run = hyperdrive_run.get_best_run_by_primary_metric()\n",
-        "print(best_run.get_details()['runDefinition']['arguments'])\n"
+        "print(best_run.get_details()['runDefinition']['arguments'])\n",
+        "\n",
+        "# Save the model\n",
+        "best_run.download_file(\"/outputs/model.joblib\", \"Logistic_reg_hd_bankmarketing.joblib\")\n"
       ],
       "outputs": [
         {
@@ -343,7 +353,8 @@
     {
       "cell_type": "code",
       "source": [
-        "train_data = pd.concat([x_train, y_train], axis=1)"
+        "train_data = pd.concat([x_train, y_train], axis=1)\n",
+        "# train_data.to_csv(local_path)"
       ],
       "outputs": [],
       "execution_count": 30,
@@ -366,15 +377,14 @@
     {
       "cell_type": "code",
       "source": [
-        "local_path = \"prepared.csv\"\r\n",
-        "# train_data.to_csv(local_path)\r\n",
-        "datastore = ws.get_default_datastore()\r\n",
-        "datastore.upload(src_dir=\".\", target_path=\"data\")\r\n",
-        "\r\n",
-        "# from azureml.core import Dataset\r\n",
-        "\r\n",
-        "# training_dataset = Dataset.Tabular.from_delimited_files(path=[(datastore, local_path)])\r\n",
-        "training_dataset = TabularDatasetFactory.register_pandas_dataframe(train_data, (datastore, local_path), \"train_parquet\")"
+        "# from azureml.core import Dataset\n",
+        "\n",
+        "local_path = \"prepared.csv\"\n",
+        "datastore = ws.get_default_datastore()\n",
+        "datastore.upload(src_dir=\".\", target_path=\"data\")\n",
+        "\n",
+        "# training_dataset = Dataset.Tabular.from_delimited_files(path=[(datastore, local_path)])\n",
+        "training_dataset = TabularDatasetFactory.register_pandas_dataframe(train_data, (datastore, local_path), \"train_dataset\")"
       ],
       "outputs": [
         {
@@ -459,6 +469,13 @@
       }
     },
     {
+      "source": [
+        "https://knowledge.udacity.com/questions/374305"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "source": [
         "from azureml.train.automl import AutoMLConfig\n",
@@ -503,7 +520,7 @@
         "### YOUR CODE HERE ###\n",
         "# Choose a name for the experiment and specify the project folder.\n",
         "experiment_name = 'udacity-project-automl'\n",
-        "project_folder = 'automl-classification'\n",
+        "# project_folder = 'automl-classification'\n",
         "\n",
         "experiment = Experiment(ws, experiment_name)"
       ],
@@ -639,9 +656,9 @@
     {
       "cell_type": "code",
       "source": [
-        "from azureml.automl.runtime.onnx_convert import OnnxConverter\r\n",
-        "\r\n",
-        "best_run, best_model = run.get_output()\r\n",
+        "# from azureml.automl.runtime.onnx_convert import OnnxConverter\n",
+        "\n",
+        "best_run, best_model = run.get_output()\n",
         "best_run.register_model(model_name=\"automl_best_model.pkl\", model_path=\"./outputs/\")"
       ],
       "outputs": [
@@ -673,7 +690,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "cpu_cluster.delete()"
+      ],
       "outputs": [],
       "execution_count": null,
       "metadata": {
