Add support code link at end of notebook

--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -740,6 +740,20 @@
           "logged": 1610426148107
         }
       }
+    },
+    {
+      "source": [
+        "### Some support notebooks:"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "source": [
+        "https://github.com/Azure/MachineLearningNotebooks/blob/master/how-to-use-azureml/automated-machine-learning/classification-credit-card-fraud/auto-ml-classification-credit-card-fraud.ipynb\n"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     }
   ],
   "metadata": {
